RESOLVED FIXED 252039
EXT_norm16_texture fails with texSubImage and signed types
https://bugs.webkit.org/show_bug.cgi?id=252039
Summary EXT_norm16_texture fails with texSubImage and signed types
Kimmo Kinnunen
Reported 2023-02-10 02:13:22 PST
EXT_norm16_texture fails with texSubImage and signed types
Attachments
Kimmo Kinnunen
Comment 1 2023-02-10 02:13:49 PST
Kimmo Kinnunen
Comment 2 2023-02-10 03:00:45 PST
EWS
Comment 3 2023-02-10 09:58:36 PST
Committed 260114@main (b34b56522035): <https://commits.webkit.org/260114@main> Reviewed commits have been landed. Closing PR #9916 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.