Cherry-pick b34b56522035. rdar://problem/104340031

EXT_norm16_texture fails with texSubImage and signed types
    https://bugs.webkit.org/show_bug.cgi?id=252039
    rdar://104340031

    Reviewed by Dean Jackson.

    The supported texture format tables would have entries for
    a signed or unsigned internal format and matching type.

    The texSubImage variants do not communicate the sized internal format,
    rather unsized format type. Data parameters are validated based on
    format, not internal format. For these, the signed variants were
    missing.

    Add texture format table entries for signed types that match the format
    parameters.

    Add a precautionary validation case so that future such bugs would not
    pass the control flow forward, into the copying phase.

    * LayoutTests/webgl/webgl-ext-norm16-texture-texsubimage3d-nocrash.html: Added.
    * Source/ThirdParty/ANGLE/src/libANGLE/ErrorStrings.h:
    * Source/ThirdParty/ANGLE/src/libANGLE/formatutils.cpp:
    (gl::BuildInternalFormatInfoMap):
    * Source/ThirdParty/ANGLE/src/libANGLE/validationES.cpp:
    (gl::ValidImageDataSize):

    Canonical link: https://commits.webkit.org/260114@main

Canonical link: https://commits.webkit.org/259548.176@safari-7615-branch